--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["KaiLey"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.9"
+python = "^3.8.10"
 dotenv = "^0.0.5"
 pyTelegramBotAPI = "^4.7.0"
 
