--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "<3.9"
-dotenv = "^0.0.5"
-pyTelegramBotAPI = "^4.7.0"
+dotenv = "<0.0.5"
+pyTelegramBotAPI = "<4.7.0"
 
 
 [build-system]
